tenants/platform/services/vault/postInstall/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - vault.jdwlabs.com
  rules:
    - backendRefs:
        - name: platform-vault-ui
          port: 8200
