tenants/platform/services/vault/postInstall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.jdwlabs.com
      secretName: vault-tls
  rules:
    - host: vault.jdwlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-vault-ui
                port:
                  number: 8200
